@@ -33,8 +33,6 @@
  *  \brief Modification of jpip.c from 2KAN indexer
  */
 
-#include <stdlib.h>
-#include <math.h>
 #include "opj_includes.h"
 
 
